RESOLVED FIXED184792
Runtime logging during GC can cause crash
https://bugs.webkit.org/show_bug.cgi?id=184792
Summary Runtime logging during GC can cause crash
Eric Carlson
Reported 2018-04-19 13:49:22 PDT
It is illegal to allocate during GC, so Document should create the Inspector ConsoleMessage from a task queue in case an object logs during GC.
Attachments
Patch (5.73 KB, patch)
2018-04-19 14:03 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2018-04-19 13:50:00 PDT
Eric Carlson
Comment 2 2018-04-19 14:03:22 PDT
Eric Carlson
Comment 3 2018-04-19 14:54:11 PDT
The GTK build failure is unrelated: Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/unified-sources/UnifiedSource217.cpp.o -c /home/ews/ltilve-gtk-wk2-ews/WebKit/WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource217.cpp virtual memory exhausted: Cannot allocate memory
Chris Dumez
Comment 4 2018-04-19 14:56:06 PDT
Comment on attachment 338355 [details] Patch LGTM2
WebKit Commit Bot
Comment 5 2018-04-19 15:21:27 PDT
Comment on attachment 338355 [details] Patch Clearing flags on attachment: 338355 Committed r230822: <https://trac.webkit.org/changeset/230822>
WebKit Commit Bot
Comment 6 2018-04-19 15:21:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.