Runtime logging during GC can cause crash https://bugs.webkit.org/show_bug.cgi?id=184792 <rdar://problem/39567927>

Reviewed by Jer Noble.

Source/WebCore:

Test: media/destructor-logging-crash.html

* dom/Document.cpp:
(WebCore::Document::~Document): Clear the logger observer immediately so anything logged
as a side effect of the destructor won't cause a problem.
(WebCore::Document::didLogMessage): Create the ConsoleMessage in a task.
* dom/Document.h:

LayoutTests:

* media/destructor-logging-crash-expected.txt: Added.
* media/destructor-logging-crash.html: Added.


Canonical link: https://commits.webkit.org/200300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230822 268f45cc-cd09-0410-ab3c-d52691b4dbfc